[package]
name = "test_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1.4"
rand_chacha = "0.3.1"

[build-dependencies]
rand = "0.8"

[features]
default = ["rand/std"]